--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -10,3 +10,10 @@ dd {
   padding-left: 3em;
   padding-bottom: 1em;
 }
+
+th, td {
+  border: 1px solid #cccccc;
+  text-align: left;
+  margin: 0;
+  padding: 6px 13px;
+}
